kubeflow-deployments/private-blueprint/.build/kubeflow-apps/networking.istio.io_v1alpha3_virtualservice_katib-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: katib-ui
  namespace: kubeflow
  labels:
    app.kubernetes.io/component: katib
    app.kubernetes.io/name: katib-controller
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /katib/
    rewrite:
      uri: /katib/
    route:
    - destination:
        port:
          number: 80
        host: katib-ui.kubeflow.svc.cluster.local
